--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,84 @@
     font-family: monospace;
 }
 
+.new-app {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+}
+
+button {
+    padding: 5px;
+    color: black;
+    background-color: white;
+    border: 1px solid gray;
+    box-shadow: 2px 2px 5px gray;
+    margin-top: 10px;
+}
+
+.new-app form {
+    border: 1px solid gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.new-app input {
+    padding: 5px;
+    margin: 5px;
+}
+
+.pass_input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid gray;
+    padding: 20px;
+    position: absolute;
+    background-color: white;
+}
+
+.pass_input input {
+    padding: 5px;
+}
+
+.select-background {
+    position: absolute;
+    background-color: white;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+
+.select {
+    width: fit-content;
+    height: fit-content;
+    border: 1px solid black;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 5px gray;
+}
+
+.select select, .select button {
+    padding: 5px;
+    margin: 10px;
+}
+
 #result {
     display: flex;
     flex-direction: column;
@@ -100,4 +178,8 @@ h3 {
 
 .picked {
     background-color: rgba(130, 255, 130, 0.636);
+}
+
+.hidden {
+    display: none;
 }
